[package]
name = "api-rate-limiter"
version = "0.1.3"
edition = "2021"
description = "A simple rate limiter for Rust APIs"
license = "MIT"
repository = "https://github.com/rishabh-chaturvedi/api-rate-limiter"
readme = "README.md"
keywords = ["rate-limiter", "api", "rust"]
categories = ["web-programming", "concurrency"]

[dependencies]
dashmap = "5"